# CSCI723GraphDB

./: .gitignore  README.md  grading_a8_q1.json
GradingSoftware/: README.md  pyproject.toml
GradingSoftware/gradingsoftware/edu/rit/gdb/grading/: GradingSoftware.py
LabelPropagation/: pyproject.toml
LabelPropagation/labelpropa/edu/rit/a8/: LabelPropagation.py
LabelPropagation/labelpropa/edu/rit/gdb/a8/: LabelPropagation.py
LabelPropagation/labelpropa/edu/rit/project/: LabelPropagation.py
